--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "service.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon ./src/server.ts"
   },
