--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon ./src/server.ts"
+    "dev": "nodemon ./src/server.ts",
+    "dev:test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test nodemon src/server.ts",
+    "test:integration": "dotenv -e .env.test jest -- -i ./tests/integration",
+    "test:unit": "dotenv -e .env.test jest -- -i ./tests/units"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/cryptr": "^4.0.1",
@@ -21,6 +25,7 @@
     "@types/node": "^18.6.4",
     "@types/nodemon": "^1.19.2",
     "@types/supertest": "^2.0.12",
+    "jest": "^28.1.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
