--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jsonwebtoken": "^8.5.1",
     "node": "^18.7.0",
     "nodemon": "^2.0.19",
-    "prisma": "^4.1.1"
+    "prisma": "^4.1.1",
+    "supertest": "^6.2.4"
   }
 }
