--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node": "^18.7.0",
     "nodemon": "^2.0.19",
     "prisma": "^4.1.1",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "url-metadata": "^2.5.0"
   }
 }
