--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon ./src/server.ts",
-    "dev:test": "dotenv -e .env.test prisma migrate dev && dotenv -e .env.test nodemon src/server.ts",
-    "test:integration": "dotenv -e .env.test jest -- -i ./tests/integration",
-    "test:unit": "dotenv -e .env.test jest -- -i ./tests/units"
+    "build": "tsc",
+    "start": "node dist/src/server.js",
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
