--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "projeto-abelhas-sem-ferrao_back-end",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.18.0"
+  },
   "description": "",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/src/server.js",
+    "start": "node dist/src/server.ts",
     "dev": "nodemon src/server.ts"
   },
   "keywords": [],
@@ -38,7 +41,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "node": "^18.7.0",
+    "node": "^16.18.0",
     "nodemon": "^2.0.19",
     "prisma": "^4.1.1",
     "supertest": "^6.2.4",
