--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "server.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/src/server.ts",
+    "start": "node dist/src/server.js",
     "dev": "nodemon src/server.ts"
   },
   "keywords": [],
