--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projeto-abelhas-sem-ferrao_back-end",
   "version": "1.0.0",
   "engines": {
-    "node": "16.18.0"
+    "node": "20.x"
   },
   "description": "",
   "type": "module",
